[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
module = 'Scribe'
author = 'Xiaojie Qiu, Bingchen Ren, Arman Rahimzamani'
author-email = 'xqiu.sc@gmail.com'
home-page = 'https://github.com/aristoteleo/Scribe-py'
license = 'BSD'
description-file = 'README.md'
requires-python = '>=3.6'
requires = ['cvxopt>=1.2.3', 'pandas>=0.23.0', 'numpy>=1.14', 'scipy>=1.0', 'scikit-learn>=0.19.1', 
                      'pyccm>=0.4', 'statsmodels>=0.9.0', 'scanpy>=1.3.3', 'anndata>=0.6.18', 'loompy>=2.0.12', 
                      'matplotlib>=2.2', 'setuptools']
requires-extra = { doc = ['docutils'], test = ['pytest', 'loompy'] }
keywords = 'Scribe network scrna-seq velocity causality singlecell'
classifiers = [
	'License :: OSI Approved :: BSD License',
	'Development Status :: 5 - Production/Stable',
	'Intended Audience :: Science/Research',
	'Natural Language :: English',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.6',
	'Programming Language :: Python :: 3.7'
]
